force-app/main/default/objects/FMZ_Welcome_Message__c/FMZ_Welcome_Message__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FMZ Welcome Message</label>
</CustomObject>