force-app/main/default/objects/FMZ_Welcome_Message__c/fields/Text_Color_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Text_Color_Hex_Code__c</fullName>
    <label>Text Color Hex Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>