force-app/main/default/objects/FMZ_Welcome_Message__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Use &#39;{0}&#39; for current users name. Use &#39;{1}&#39; for the current users first name.</description>
    <inlineHelpText>Use &#39;{0}&#39; for current users name. Use &#39;{1}&#39; for the current users first name.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>